# Essay_AI

./: .replit  README.md  app.py  main.py  pyproject.toml  train_models.py
attached_assets/: Pasted-Creating-an-Automated-Essay-Feedback-System-AEFS-involves-a-combination-of-Natural-Language-Proces-1746958733496.txt
modules/: coherence_analyzer.py  dataset_loader.py  essay_scorer.py  feedback_generator.py  grammar_checker.py  model_trainer.py  sentence_structure.py  simple_model.py  thesis_generator.py  vocabulary_analyzer.py
static/css/: custom.css
static/js/: essay_feedback.js
templates/: index.html
