[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "language-tool-python>=2.9.3",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
    "textstat>=0.7.7",
]
